--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ body{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 12px;
+    padding: 10px 10px;
 }
 .task {
     background-color: #1f3801;
